# path_tracer

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
renderer/: camera.h  ray.h  render.cpp  render.h
renderer/objects/: hit_record.h  object.h  object_list.cpp  object_list.h  sphere.cpp  sphere.h
utils/: assertion.h  crc.h  log.cpp  log.h  macros.h
utils/args/: arguments.cpp  arguments.h
utils/img/: formatter.cpp  formatter.h  jpeg.cpp  jpeg.h  png.cpp  png.h  types.cpp  types.h
utils/math/: random.h  vec2.h  vec3.h  vec4.h
